# media-compressor

./: CHANGELOG.md  OPTIMIZATION_SPEC.md  README.md  docker-compose.yml  優化.md
.agents/: AGENTS.md
.github/workflows/: deploy.yml  release.yml
docs/: CHANGELOG_FORMAT.md  GLOSSARY.md  編譯優化.md
docs/adr/: 0001-progressive-disclosure-for-compression-settings.md  0002-on-demand-media-previews.md  0003-quicktime-mov-input-support.md  0004-semver-package-version-and-matching-tags.md  0005-machine-readable-changelog-format.md  0006-main-deploys-pages-tags-create-releases.md  0007-first-release-is-v0-1-0.md  0008-release-quality-gates.md  0009-no-prerelease-release-tags-initially.md  0010-chrome-only-mov-acceptance.md  0011-advanced-settings-are-session-only.md  0012-releases-are-immutable-per-tag.md  0013-windows-portable-offline-release.md  0014-go-launcher-and-readme-instructions.md  0015-unsigned-launcher-with-checksum.md  0016-launcher-console-controls-server-lifetime.md  0017-visible-single-auto-retry-for-oversize-output.md  0018-immediate-visible-cancellation.md  0019-retry-follows-source-item.md  0020-download-both-retry-results.md  0021-auto-retry-applies-to-video-only.md  0022-stop-after-single-retry.md  0024-versioned-pwa-releases-on-github-pages.md  (+14 more)
media-compressor/: index.html  package-lock.json  package.json  vite.config.js
media-compressor/src-tauri/: Cargo.toml  tauri.conf.json
media-compressor/src-tauri/capabilities/: default.json
media-compressor/src-tauri/src/: lib.rs  main.rs
offline-launcher/: go.mod  main.go
scripts/: build-portable-nsis.nsi
(+14 files in other folders)
