[package]
name = "media-compressor"
version = "0.2.0"
description = "Offline media compressor"
authors = ["MediaCompressor contributors"]
edition = "2021"

[lib]
name = "media_compressor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "media-compressor"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
